copy to library

--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -74,6 +74,9 @@
 		<Unit filename="items.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="library.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
