in-game maps support

--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -57,6 +57,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="blocks.h" />
+		<Unit filename="cartograph.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="chunks.c">
 			<Option compilerVar="CC" />
 		</Unit>
