--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -100,6 +100,9 @@
 		<Unit filename="physics.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="pixelart.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="player.c">
 			<Option compilerVar="CC" />
 		</Unit>
