--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -128,6 +128,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="utils.h" />
+		<Unit filename="waypoints.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
