copy entity in selection

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,7 +1,14 @@
-DBGShowHeightMap=1
-DBGLightValue=0
-DBGShowChunks=1
 WndHeight=1080
 WndWidth=1600
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 RenderDist=3
+
+[Selection]
+CopyAir=1
+CopyWater=1
+CopyEntity=1
+
+[Debug]
+ShowHeightMap=1
+LightValue=0
+ShowChunks=1
