quick options interface

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,7 +1,13 @@
 WndHeight=1080
 WndWidth=1600
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
+
+[Options]
+RedstoneTick=2000
+GUIScale=100
+CompassSize=100
 RenderDist=3
+FieldOfVision=80
 
 [Selection]
 CopyAir=1
