--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -140,6 +140,9 @@
 		<Unit filename="worldItems.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="worldSelect.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<envvars />
