early support for minecarts

--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -94,6 +94,9 @@
 		<Unit filename="maps.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="minecarts.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="models.c">
 			<Option compilerVar="CC" />
 		</Unit>
