--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -133,6 +133,9 @@
 		<Unit filename="texture.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="undoredo.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="utils.c">
 			<Option compilerVar="CC" />
 		</Unit>
