--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -3,10 +3,18 @@ WndWidth=1600
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 
 [Options]
+LockMouse=0
+FullScreen=0
+AutoEdit=0
+UsePreview=1
+UseFOG=1
+MouseSpeed=100
+TargetFPS=60
+Brightness=0
 RedstoneTick=100
 GUIScale=100
-CompassSize=100
-RenderDist=3
+CompassSize=-1
+RenderDist=8
 FieldOfVision=80
 
 [Selection]
