--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -17,6 +17,38 @@ CompassSize=100
 RenderDist=8
 FieldOfVision=80
 
+[KeyBindings]KeyForward=E
+KeyBackward=D
+KeyStrafeLeft=S
+KeyStrafeRight=F
+KeyOffHand=G
+KeyOpenInventory=I
+KeyTrowItem=T
+KeyJump=Space
+KeyFlyDown=Left shift
+KeySliceView=---
+KeyPlaceBlock=LMB
+KeyMoveView=RMB
+KeyActivateBlock=RMB
+KeyPickBlock=MMB
+
+[MenuCommands]CmdHideHud=F1
+CmdDebugInfo=F3
+CmdAdvanceTime=F5
+CmdSaveLocation=F10
+CmdWaypoints=Ctrl+G
+CmdSchemaLibrary=Ctrl+L
+CmdUndoChange=Ctrl+Z
+CmdRedoChange=Ctrl+Y
+CmdTakeCapture=F2
+CmdBackInTime=F6
+CmdSwitchMode=F8
+CmdFullscren=F11
+CmdClearSel=Ctrl+D
+CmdCopySel=Ctrl+C
+CmdPasteClip=Ctrl+V
+CmdWorldInfo=Ctrl+I
+
 [Selection]
 CopyAir=1
 CopyWater=1
