--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,6 +1,7 @@
 WndHeight=1080
 WndWidth=1600
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
+WorldsDir=.
 
 [Options]
 LockMouse=0
@@ -9,7 +10,7 @@ AutoEdit=1
 UsePreview=1
 UseFOG=1
 MouseSpeed=100
-TargetFPS=60
+TargetFPS=40
 Brightness=0
 RedstoneTick=100
 GUIScale=100
