world select integration

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,3 +1,4 @@
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
 WndHeight=1080
 WndWidth=1600
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
@@ -33,7 +34,9 @@ KeyMoveView=RMB
 KeyActivateBlock=RMB
 KeyPickBlock=MMB
 
-[MenuCommands]CmdHideHud=F1
+[MenuCommands]CmdCloseWorld=Ctrl+W
+CmdSaveChanges=Ctrl+S
+CmdHideHud=F1
 CmdDebugInfo=F3
 CmdAdvanceTime=F5
 CmdSaveLocation=F10
@@ -41,7 +44,7 @@ CmdWaypoints=Ctrl+G
 CmdSchemaLibrary=Ctrl+L
 CmdUndoChange=Ctrl+Z
 CmdRedoChange=Ctrl+Y
-CmdTakeCapture=F2
+CmdTakeCapture=Print screen
 CmdBackInTime=F6
 CmdSwitchMode=F8
 CmdFullscren=F11
