mouse lock refined

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -5,7 +5,7 @@ CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 
 [Options]
-LockMouse=0
+LockMouse=1
 FullScreen=0
 AutoEdit=1
 UsePreview=1
@@ -16,7 +16,7 @@ Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=8
+RenderDist=3
 FieldOfVision=80
 
 [KeyBindings]KeyForward=E
@@ -28,7 +28,7 @@ KeyOpenInventory=I
 KeyTrowItem=T
 KeyJump=Space
 KeyFlyDown=Left shift
-KeySliceView=---
+KeySliceView=Tab
 KeyPlaceBlock=LMB
 KeyMoveView=RMB
 KeyActivateBlock=RMB
@@ -56,7 +56,7 @@ CmdWorldInfo=Ctrl+I
 [Selection]
 CopyAir=1
 CopyWater=1
-CopyEntity=1
+CopyEntity=0
 
 [Debug]
 ShowHeightMap=1
