--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -5,7 +5,7 @@ CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 
 [Options]
-LockMouse=1
+LockMouse=0
 FullScreen=0
 AutoEdit=1
 UsePreview=1
@@ -18,6 +18,7 @@ GUIScale=100
 CompassSize=100
 RenderDist=3
 FieldOfVision=80
+Lang=fr
 
 [KeyBindings]KeyForward=E
 KeyBackward=D
