--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,10 +1,10 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
+WorldEdit=
 WndHeight=1080
 WndWidth=1600
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 
-[Options]
+[Options]FullScrResol=1920x1080
 LockMouse=0
 FullScreen=0
 AutoEdit=1
@@ -18,7 +18,7 @@ GUIScale=100
 CompassSize=100
 RenderDist=3
 FieldOfVision=80
-Lang=fr
+Lang=fr_FR
 
 [KeyBindings]KeyForward=E
 KeyBackward=D
