--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
 WndHeight=1080
 WndWidth=1600
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
@@ -13,10 +13,10 @@ UseFOG=1
 MouseSpeed=100
 TargetFPS=40
 Brightness=0
-RedstoneTick=100
+RedstoneTick=1000
 GUIScale=100
 CompassSize=100
-RenderDist=3
+RenderDist=4
 FieldOfVision=80
 Lang=fr_FR
 
