nearby chunk update redone

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -18,7 +18,7 @@ GUIScale=100
 CompassSize=100
 RenderDist=4
 FieldOfVision=80
-Lang=fr_FR
+Lang=fr
 
 [KeyBindings]KeyForward=E
 KeyBackward=D
@@ -61,5 +61,5 @@ CopyEntity=0
 
 [Debug]
 ShowHeightMap=1
-LightValue=0
+LightValue=1
 ShowChunks=1
