dropped item by piston

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,6 +1,5 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
-WndHeight=1080
-WndWidth=1600
+WorldEdit=C:\Drive_E\Projets\MCEdit\TestMesh
+WndSize=1600x1080
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 
@@ -13,7 +12,7 @@ UseFOG=1
 MouseSpeed=100
 TargetFPS=40
 Brightness=0
-RedstoneTick=1000
+RedstoneTick=100
 GUIScale=100
 CompassSize=100
 RenderDist=4
@@ -38,21 +37,24 @@ KeyPickBlock=MMB
 [MenuCommands]CmdCloseWorld=Ctrl+W
 CmdSaveChanges=Ctrl+S
 CmdHideHud=F1
-CmdDebugInfo=F3
-CmdAdvanceTime=F5
-CmdSaveLocation=F10
 CmdWaypoints=Ctrl+G
 CmdSchemaLibrary=Ctrl+L
 CmdUndoChange=Ctrl+Z
 CmdRedoChange=Ctrl+Y
 CmdTakeCapture=Print screen
-CmdBackInTime=F6
-CmdSwitchMode=F8
 CmdFullscren=F11
 CmdClearSel=Ctrl+D
 CmdCopySel=Ctrl+C
 CmdPasteClip=Ctrl+V
 CmdWorldInfo=Ctrl+I
+
+[Extra]
+DebugInfo=F3
+DebugAdvanceTime=F5
+DebugSaveLocation=F10
+DebugBackInTime=F6
+DebugSwitchMode=F8
+DebugFrame=Backspace
 
 [Selection]
 CopyAir=1
