mipmap support for terrain.png

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\TestMesh
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
 WndSize=1600x1080
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
@@ -28,20 +28,21 @@ KeyOpenInventory=I
 KeyTrowItem=T
 KeyJump=Space
 KeyFlyDown=Left shift
-KeySliceView=Tab
 KeyPlaceBlock=LMB
 KeyMoveView=RMB
 KeyActivateBlock=RMB
 KeyPickBlock=MMB
 
-[MenuCommands]CmdCloseWorld=Ctrl+W
+[MenuCommands]CmdSelUp=Q
+CmdSelDown=Z
+CmdCloseWorld=Ctrl+W
 CmdSaveChanges=Ctrl+S
 CmdHideHud=F1
 CmdWaypoints=Ctrl+G
 CmdSchemaLibrary=Ctrl+L
 CmdUndoChange=Ctrl+Z
 CmdRedoChange=Ctrl+Y
-CmdTakeCapture=Print screen
+CmdTakeCapture=F2
 CmdFullscren=F11
 CmdClearSel=Ctrl+D
 CmdCopySel=Ctrl+C
@@ -55,6 +56,7 @@ DebugSaveLocation=F10
 DebugBackInTime=F6
 DebugSwitchMode=F8
 DebugFrame=Backspace
+DebugSliceView=Tab
 
 [Selection]
 CopyAir=1
