--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -32,6 +32,7 @@ KeyPlaceBlock=LMB
 KeyMoveView=RMB
 KeyActivateBlock=RMB
 KeyPickBlock=MMB
+KeyZoom=Tab
 
 [MenuCommands]CmdSelUp=Q
 CmdSelDown=Z
@@ -56,7 +57,7 @@ DebugSaveLocation=F10
 DebugBackInTime=F6
 DebugSwitchMode=F8
 DebugFrame=Backspace
-DebugSliceView=Tab
+DebugSliceView=Ctrl+Tab
 
 [Selection]
 CopyAir=1
