--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World5
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
 WndSize=1600x1080
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
