redstone/block updates fixes

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\Piston demo world
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
 WndSize=1600x1080
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
@@ -66,5 +66,5 @@ CopyEntity=0
 
 [Debug]
 ShowHeightMap=1
-LightValue=0
+LightValue=1
 ShowChunks=1
