--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,5 +1,5 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
-WndSize=1600x1080
+WorldEdit=C:\Drive_E\Projets\MCEdit\Piston demo world
+WndSize=1600x1106
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 
