added some entity models

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\Piston demo world
+WorldEdit=C:\Drive_E\Projets\MCEdit\TestMesh
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
@@ -66,5 +66,5 @@ CopyEntity=0
 
 [Debug]
 ShowHeightMap=1
-LightValue=1
+LightValue=0
 ShowChunks=1
