major chunk loading refactoring

--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -61,6 +61,9 @@
 		<Unit filename="cartograph.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="chunkMesh.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="chunks.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -94,6 +97,9 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="maps.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="meshBanks.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="minecarts.c">
