--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,23 +1,23 @@
 WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
 WndSize=1600x1100
-CaptureDir=C:\Drive_E\Minecraft\MCEdit
+CaptureDir=screenshots
 WorldsDir=.
+Lang=fr
 
-[Options]FullScrResol=1920x1080
+[Options]
 LockMouse=0
 FullScreen=0
 AutoEdit=1
 UsePreview=1
 UseFOG=1
 MouseSpeed=100
-TargetFPS=40
+TargetFPS=60
 Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=4
+RenderDist=16
 FieldOfVision=80
-Lang=fr
 
 [KeyBindings]KeyForward=E
 KeyBackward=D
@@ -28,36 +28,30 @@ KeyOpenInventory=I
 KeyTrowItem=T
 KeyJump=Space
 KeyFlyDown=Left shift
+KeySliceView=Tab
 KeyPlaceBlock=LMB
 KeyMoveView=RMB
 KeyActivateBlock=RMB
 KeyPickBlock=MMB
-KeyZoom=Tab
 
-[MenuCommands]CmdSelUp=Q
-CmdSelDown=Z
-CmdCloseWorld=Ctrl+W
+[MenuCommands]CmdCloseWorld=Ctrl+W
 CmdSaveChanges=Ctrl+S
 CmdHideHud=F1
+CmdDebugInfo=F3
+CmdAdvanceTime=F5
+CmdSaveLocation=F10
 CmdWaypoints=Ctrl+G
 CmdSchemaLibrary=Ctrl+L
 CmdUndoChange=Ctrl+Z
 CmdRedoChange=Ctrl+Y
-CmdTakeCapture=F2
+CmdTakeCapture=Print screen
+CmdBackInTime=F6
+CmdSwitchMode=F8
 CmdFullscren=F11
 CmdClearSel=Ctrl+D
 CmdCopySel=Ctrl+C
 CmdPasteClip=Ctrl+V
 CmdWorldInfo=Ctrl+I
-
-[Extra]
-DebugInfo=F3
-DebugAdvanceTime=F5
-DebugSaveLocation=F10
-DebugBackInTime=F6
-DebugSwitchMode=F8
-DebugFrame=Backspace
-DebugSliceView=Ctrl+Tab
 
 [Selection]
 CopyAir=1
@@ -66,5 +60,5 @@ CopyEntity=0
 
 [Debug]
 ShowHeightMap=1
-LightValue=1
+LightValue=0
 ShowChunks=1
