--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,6 +1,6 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
+WorldEdit=C:\Drive_E\Projets\MCEdit\World5
 WndSize=1600x1100
-CaptureDir=screenshots
+CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 Lang=fr
 
@@ -16,7 +16,7 @@ Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=16
+RenderDist=6
 FieldOfVision=80
 
 [KeyBindings]KeyForward=E
