--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
@@ -16,7 +16,7 @@ Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=10
+RenderDist=3
 FieldOfVision=80
 
 [KeyBindings]KeyForward=E
