--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
+WorldEdit=C:\Drive_E\Projets\MCEdit\World5
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
@@ -44,7 +44,7 @@ CmdWaypoints=Ctrl+G
 CmdSchemaLibrary=Ctrl+L
 CmdUndoChange=Ctrl+Z
 CmdRedoChange=Ctrl+Y
-CmdTakeCapture=Print screen
+CmdTakeCapture=F2
 CmdBackInTime=F6
 CmdSwitchMode=F8
 CmdFullscren=F11
