multi-thread chunk loading

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_2
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
@@ -11,7 +11,7 @@ AutoEdit=1
 UsePreview=1
 UseFOG=0
 MouseSpeed=100
-TargetFPS=60
+TargetFPS=40
 Brightness=0
 RedstoneTick=100
 GUIScale=100
