MT chunk loading fix

--- a/MCEdit.cbp
+++ b/MCEdit.cbp
@@ -126,6 +126,9 @@
 		<Unit filename="quadtree.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="raycasting.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="redstone.c">
 			<Option compilerVar="CC" />
 		</Unit>
@@ -157,10 +160,10 @@
 		<Unit filename="waypoints.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="worldItems.c">
+		<Unit filename="worldSelect.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Unit filename="worldSelect.c">
+		<Unit filename="worlditems.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
