--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12_new
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
@@ -9,14 +9,14 @@ LockMouse=0
 FullScreen=0
 AutoEdit=1
 UsePreview=1
-UseFOG=0
+UseFOG=1
 MouseSpeed=100
 TargetFPS=60
 Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=6
+RenderDist=16
 FieldOfVision=80
 
 [KeyBindings]KeyForward=E
