GPU raycasting boilerplate

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,10 +1,11 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_2
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 Lang=fr
 
-[Options]
+[Options]ExtraDist=1
+FullScrResol=3200x1800
 LockMouse=0
 FullScreen=0
 AutoEdit=1
@@ -16,7 +17,7 @@ Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=16
+RenderDist=6
 FieldOfVision=80
 
 [KeyBindings]KeyForward=E
