raycasting from GPU data

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -4,23 +4,25 @@ CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 Lang=fr
 
-[Options]ExtraDist=1
+[Options]
+ExtraDist=3
 FullScrResol=3200x1800
 LockMouse=0
 FullScreen=0
 AutoEdit=1
 UsePreview=1
-UseFOG=1
+UseFOG=0
 MouseSpeed=100
 TargetFPS=60
 Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=6
+RenderDist=4
 FieldOfVision=80
 
-[KeyBindings]KeyForward=E
+[KeyBindings]
+KeyForward=E
 KeyBackward=D
 KeyStrafeLeft=S
 KeyStrafeRight=F
@@ -35,7 +37,8 @@ KeyMoveView=RMB
 KeyActivateBlock=RMB
 KeyPickBlock=MMB
 
-[MenuCommands]CmdCloseWorld=Ctrl+W
+[MenuCommands]
+CmdCloseWorld=Ctrl+W
 CmdSaveChanges=Ctrl+S
 CmdHideHud=F1
 CmdDebugInfo=F3
