sign allocation refactoring

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,24 +1,24 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World1_2
+WorldEdit=
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 Lang=fr
 
 [Options]
-ExtraDist=3
+ExtraDist=0
 FullScrResol=3200x1800
 LockMouse=0
 FullScreen=0
 AutoEdit=1
 UsePreview=1
-UseFOG=0
+UseFOG=1
 MouseSpeed=100
 TargetFPS=60
 Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=4
+RenderDist=16
 FieldOfVision=80
 
 [KeyBindings]
