--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,17 +1,17 @@
-WorldEdit=
+WorldEdit=World1
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 Lang=fr
 
 [Options]
-ExtraDist=0
+ExtraDist=8
 FullScrResol=3200x1800
 LockMouse=0
 FullScreen=0
 AutoEdit=1
 UsePreview=1
-UseFOG=1
+UseFOG=0
 MouseSpeed=100
 TargetFPS=60
 Brightness=0
