removed raycasting and lighting

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=World1
+WorldEdit=C:\Drive_E\Projets\MCEdit\TestMesh
 WndSize=1600x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
