first version of new lighting

--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,5 +1,5 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\TestMesh
-WndSize=1600x1100
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1
+WndSize=1986x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
 Lang=fr
@@ -11,14 +11,14 @@ LockMouse=0
 FullScreen=0
 AutoEdit=1
 UsePreview=1
-UseFOG=0
+UseFOG=1
 MouseSpeed=100
 TargetFPS=60
 Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=16
+RenderDist=32
 FieldOfVision=80
 
 [KeyBindings]
@@ -64,5 +64,5 @@ CopyEntity=0
 
 [Debug]
 ShowHeightMap=1
-LightValue=1
+LightValue=0
 ShowChunks=1
