--- a/MCEdit.ini
+++ b/MCEdit.ini
@@ -1,4 +1,4 @@
-WorldEdit=C:\Drive_E\Projets\MCEdit\World5
+WorldEdit=C:\Drive_E\Projets\MCEdit\World1_12
 WndSize=1986x1100
 CaptureDir=C:\Drive_E\Minecraft\MCEdit
 WorldsDir=.
@@ -18,7 +18,7 @@ Brightness=0
 RedstoneTick=100
 GUIScale=100
 CompassSize=100
-RenderDist=10
+RenderDist=16
 FieldOfVision=80
 
 [KeyBindings]
